<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_positions" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_rand_root_notes"
            android:summary="@string/pref_rand_root_notes_sum"
            android:title="@string/pref_rand_root_notes" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_patterns" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_major_scales"
            android:summary="@string/pref_major_scales_sum"
            android:title="@string/pref_major_scales" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_dorian_scales"
            android:summary="@string/pref_dorian_scales_sum"
            android:title="@string/pref_dorian_scales" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_phrygian_scales"
            android:summary="@string/pref_phrygian_scales_sum"
            android:title="@string/pref_phrygian_scales" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_lydian_scales"
            android:summary="@string/pref_lydian_scales_sum"
            android:title="@string/pref_lydian_scales" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_mixolydian_scales"
            android:summary="@string/pref_mixolydian_scales_sum"
            android:title="@string/pref_mixolydian_scales" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_minor_scales"
            android:summary="@string/pref_minor_scales_sum"
            android:title="@string/pref_minor_scales" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_locrian_scales"
            android:summary="@string/pref_locrian_scales_sum"
            android:title="@string/pref_locrian_scales" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_major_three_note_scales"
            android:summary="@string/pref_major_three_note_scales_sum"
            android:title="@string/pref_major_three_note_scales" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_dorian_three_note_scales"
            android:summary="@string/pref_dorian_three_note_scales_sum"
            android:title="@string/pref_dorian_three_note_scales" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_phrygian_three_note_scales"
            android:summary="@string/pref_phrygian_three_note_scales_sum"
            android:title="@string/pref_phrygian_three_note_scales" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_lydian_three_note_scales"
            android:summary="@string/pref_lydian_three_note_scales_sum"
            android:title="@string/pref_lydian_three_note_scales" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_mixolydian_three_note_scales"
            android:summary="@string/pref_mixolydian_three_note_scales_sum"
            android:title="@string/pref_mixolydian_three_note_scales" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_minor_three_note_scales"
            android:summary="@string/pref_minor_three_note_scales_sum"
            android:title="@string/pref_minor_three_note_scales" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_locrian_three_note_scales"
            android:summary="@string/pref_locrian_three_note_scales_sum"
            android:title="@string/pref_locrian_three_note_scales" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_eight_note_major_sweeps"
            android:summary="@string/pref_eight_note_major_sweeps_sum"
            android:title="@string/pref_eight_note_major_sweeps" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_eight_note_minor_sweeps"
            android:summary="@string/pref_eight_note_minor_sweeps_sum"
            android:title="@string/pref_eight_note_minor_sweeps" />
    </PreferenceCategory>

</PreferenceScreen>
