<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
	<CheckBoxPreference
		android:defaultValue="true"
		android:key="pref_major_three_note_scales"
		android:summary="@string/pref_major_three_note_scales_sum"
		android:title="@string/pref_major_three_note_scales" />
	<CheckBoxPreference
		android:defaultValue="false"
		android:key="pref_dorian_three_note_scales"
		android:summary="@string/pref_dorian_three_note_scales_sum"
		android:title="@string/pref_dorian_three_note_scales" />
	<CheckBoxPreference
		android:defaultValue="false"
		android:key="pref_phrygian_three_note_scales"
		android:summary="@string/pref_phrygian_three_note_scales_sum"
		android:title="@string/pref_phrygian_three_note_scales" />
	<CheckBoxPreference
		android:defaultValue="false"
		android:key="pref_lydian_three_note_scales"
		android:summary="@string/pref_lydian_three_note_scales_sum"
		android:title="@string/pref_lydian_three_note_scales" />
	<CheckBoxPreference
		android:defaultValue="false"
		android:key="pref_mixolydian_three_note_scales"
		android:summary="@string/pref_mixolydian_three_note_scales_sum"
		android:title="@string/pref_mixolydian_three_note_scales" />
	<CheckBoxPreference
		android:defaultValue="true"
		android:key="pref_minor_three_note_scales"
		android:summary="@string/pref_minor_three_note_scales_sum"
		android:title="@string/pref_minor_three_note_scales" />
	<CheckBoxPreference
		android:defaultValue="false"
		android:key="pref_locrian_three_note_scales"
		android:summary="@string/pref_locrian_three_note_scales_sum"
		android:title="@string/pref_locrian_three_note_scales" />
</PreferenceScreen>
