<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
		android:summary="@string/pref_positions_sum"
    	android:title="@string/pref_positions">
		<intent
			android:targetPackage="com.testception.fret_patterns"
			android:targetClass="com.testception.fret_patterns.PatternSettingsActivity"
			android:action="PositionsFragment"
		/>
	</Preference>
    <Preference
    	android:summary="@string/pref_pentatonic_sum"
    	android:title="@string/pref_pentatonic">
		<intent
			android:targetPackage="com.testception.fret_patterns"
			android:targetClass="com.testception.fret_patterns.PatternSettingsActivity"
			android:action="PentatonicFragment"
		/>
	</Preference>
    <Preference
    	android:summary="@string/pref_standard_sum"
    	android:title="@string/pref_standard">
		<intent
			android:targetPackage="com.testception.fret_patterns"
			android:targetClass="com.testception.fret_patterns.PatternSettingsActivity"
			android:action="StandardFragment"
		/>
	</Preference>
    <Preference
    	android:summary="@string/pref_three_note_sum"
    	android:title="@string/pref_three_note">
		<intent
			android:targetPackage="com.testception.fret_patterns"
			android:targetClass="com.testception.fret_patterns.PatternSettingsActivity"
			android:action="ThreeNoteFragment"
		/>
	</Preference>
    <Preference
    	android:summary="@string/pref_sweeps_sum"
    	android:title="@string/pref_sweeps">
		<intent
			android:targetPackage="com.testception.fret_patterns"
			android:targetClass="com.testception.fret_patterns.PatternSettingsActivity"
			android:action="SweepsFragment"
		/>
	</Preference>
</PreferenceScreen>
