<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
	<LinearLayout
		style="@style/Stacked"
		android:orientation="horizontal"
		android:layout_weight="8"
		android:layout_gravity="center_vertical"
		android:gravity="center_vertical"
		>
		<TextView
			android:text="@string/slow"
			style="@style/SpeedText"
			/>
		<SeekBar
			android:id="@+id/speed"
			android:progress="50"
			style="@style/SpeedBar"
			/>
		<TextView
			android:text="@string/fast"
			style="@style/SpeedText"
			/>
	</LinearLayout>
	<Button
		android:text="@string/start"
		android:onClick="startStop"
		style="@style/GradientLeft"
		/>
	<TextView
		android:id="@+id/name"
		android:text="@string/press_start"
		style="@style/GradientRight"
		/>
	<com.testception.fret_patterns.DoubleProgressBar
		android:id="@+id/progress"
		style="@style/ProgressBar"
		/>
	<com.testception.fret_patterns.FretboardView
		android:id="@+id/fretboard"
		style="@style/FretBoard"
		/>
</merge>
